@@ -195,9 +195,9 @@ extern void make_sure_seen(object *op);
 extern void make_sure_not_seen(object *op);
 /* map.c */
 extern mapstruct *has_been_loaded(char *name);
-extern char *create_pathname(char *name);
-extern char *create_overlay_pathname(char *name);
-extern int check_path(char *name, int prepend_dir);
+extern const char *create_pathname(const char *name);
+extern const char *create_overlay_pathname(const char *name);
+extern int check_path(const char *name, int prepend_dir);
 extern void dump_map(mapstruct *m);
 extern void dump_all_maps(void);
 extern int get_map_flags(mapstruct *oldmap, mapstruct **newmap, sint16 x, sint16 y, sint16 *nx, sint16 *ny);
@@ -209,8 +209,8 @@ extern void save_objects(mapstruct *m, FILE *fp, FILE *fp2, int flag);
 extern mapstruct *get_linked_map(void);
 extern void allocate_map(mapstruct *m);
 extern mapstruct *get_empty_map(int sizex, int sizey);
-extern mapstruct *load_original_map(char *filename, int flags);
-extern mapstruct *load_overlay_map(char *filename, mapstruct *m);
+extern mapstruct *load_original_map(const char *filename, int flags);
+extern mapstruct *load_overlay_map(const char *filename, mapstruct *m);
 extern int new_save_map(mapstruct *m, int flag);
 extern void clean_object(object *op);
 extern void free_all_objects(mapstruct *m);
